# core

./: .bazelignore  .bazelrc  .dockerignore  .gitignore  .gitmodules  .golangci.yml  .pre-commit-config.yaml  AGENTS.md  AUDIT_REPORT.md  AUDIT_REPORT_FINAL.md  BUILD.bazel  CODE_OF_CONDUCT.md  COVERAGE_INTERVENTION_REPORT.md  COVERAGE_REPORT.md  COVERAGE_SUMMARY.md  Dockerfile.test2  Dockerfile.test3  Dockerfile.test4  Dockerfile.test5  Dockerfile.timeserver  IMPACT_REPORT.md  JOURNAL.md  MOCKS_MANIFEST.md  MODULE.bazel  Makefile  NEW_COVERAGE_INTERVENTION_REPORT.md  NOTICE  PERFORMANCE_JOURNAL.md  PR_DESCRIPTION.md  README.md  REPORT.md  SKIPPED_TESTS.md  Truth_Reconciliation_Audit_Report.md  add_docs.py  add_smart_docs.py  audit_findings.md  audit_findings.txt  audit_manager.py  audit_report.md  branch_name.txt  (+168 more)
google/protobuf/: BUILD.bazel
proto/admin/v1/: BUILD.bazel  admin.pb.go  admin.pb.gw.go  admin.proto  admin.ts  admin_grpc.pb.go  admin_protoopaque.pb.go
proto/api/v1/: BUILD.bazel  cache.proto  catalog_service.pb.go  catalog_service.pb.gw.go  catalog_service.proto  catalog_service.ts  catalog_service_grpc.pb.go  catalog_service_protoopaque.pb.go  dashboard.pb.go  dashboard.pb.gw.go  dashboard.proto  dashboard_grpc.pb.go  dashboard_protoopaque.pb.go  discovery_service.pb.go  discovery_service.pb.gw.go  discovery_service.proto  discovery_service_grpc.pb.go  discovery_service_protoopaque.pb.go  index_service.pb.go  index_service.pb.gw.go  index_service.proto  index_service_grpc.pb.go  index_service_protoopaque.pb.go  prompts.pb.go  prompts.proto  prompts_grpc.pb.go  registration.pb.go  registration.pb.gw.go  registration.proto  registration.ts  registration_grpc.pb.go  registration_protoopaque.pb.go  skill_service.pb.go  skill_service.pb.gw.go  skill_service.proto  skill_service.ts  skill_service_grpc.pb.go  skill_service_protoopaque.pb.go  tool.proto  webhook_service.pb.go  (+4 more)
proto/bus/: BUILD.bazel  bus.pb.go  bus.proto  bus.ts  bus_protoopaque.pb.go
proto/config/v1/: BUILD.bazel  auth.pb.go  auth.proto  auth.ts  auth_protoopaque.pb.go  call.pb.go  call.proto  call.ts  call_protoopaque.pb.go  collection.pb.go  collection.proto  collection.ts  collection_protoopaque.pb.go  config.pb.go  config.proto  config.ts  config_protoopaque.pb.go  health_check.pb.go  health_check.proto  health_check.ts  health_check_protoopaque.pb.go  middleware.pb.go  middleware.proto  middleware_protoopaque.pb.go  playground.pb.go  playground.proto  playground.ts  profile.pb.go  profile.proto  profile.ts  profile_protoopaque.pb.go  prompt.pb.go  prompt.proto  prompt.ts  prompt_protoopaque.pb.go  resource.pb.go  resource.proto  resource.ts  resource_protoopaque.pb.go  service_template.pb.go  (+24 more)
proto/mcp_options/v1/: BUILD.bazel  content.pb.go  content.proto  content.ts  content_protoopaque.pb.go  mcp_options.pb.go  mcp_options.proto  mcp_options.ts  mcp_options_protoopaque.pb.go
proto/mcp_router/v1/: BUILD.bazel  mcp_router.pb.go  mcp_router.proto  mcp_router.ts  mcp_router_grpc.pb.go  mcp_router_protoopaque.pb.go  prompt.pb.go  prompt.proto
proto/topology/v1/: BUILD.bazel  topology.pb.go  topology.proto  topology.ts  topology_protoopaque.pb.go
sdk/python/: README.md  pyproject.toml
sdk/python/mcpany/: __init__.py  client.py  exceptions.py
sdk/python/tests/: test_client.py
server/cmd/connector-runtime/: main.go  (+2 more)
server/tests/: BUILD.bazel  config_drift_test.go  e2e_ip_zone_test.go  e2e_ssrf_test.go  optimization_benchmark_test.go  run_shard.sh  service_retry_test.go  smoke_test.sh  smoke_test_ui.sh  ssrf_prevention_test.go  startup_reliability_test.go
server/tools/: BUILD.bazel  audit_docs.py  check_doc.go  check_ts_doc.py  doc_fixer.py  fix_go_docs.py  fix_ts_docs.py  install_shellcheck.sh  mockgen.go  seed_profiles.go  test_doc_check.go
ui/: .dockerignore  .eslintrc.json  .gitignore  AGENTS.md  BUILD.bazel  Dockerfile  Dockerfile.ci  Dockerfile.e2e  Makefile  README.md  docker-compose.test.yml  eslint.config.mjs  gen-proto.sh  jest.config.js  jest.setup.js  jest.setup.ts  list.json  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  playwright.screenshots.config.ts  pnpm-lock.yaml  postcss.config.mjs  roadmap.md  secrets-store.json  tailwind.config.ts  test_execute.js  tsconfig.jest.json  tsconfig.json  tsconfig.test.json  verify_all.py  verify_feature.py  verify_global_search.py  verify_logs.py  vitest.config.mts  vitest.config.ts  vitest.setup.ts
ui/.idx/: dev.nix
ui/docs/: FEATURES.md  UI_OVERHAUL.md  api-key-manager.md  blueprint.md  feature_network_graph.md  features.md  global-search.md  global_search.md  intelligent-stack-composer.md  interactive_playground.md  log-stream.md  mobile-view.md  network-graph.md  network_graph.md  playground.md  resource_explorer.md  stats-feature.md  tool-inspector.md  tool_inspector_feature.md  ui-features.md  ui-overhaul.md
ui/scripts/: gen-proto.sh  generate_screenshots.py  seed-httpbin.ts  seed_audit_logs.ts  seed_resilience.ts
ui/src/: middleware.ts
ui/tests/: alerts.spec.ts  api-key-auth.spec.ts  audit-logs.spec.ts  audit-replay.spec.ts  audit-rich-content.spec.ts  audit-screenshots.spec.ts  audit.spec.ts  audit_screenshots.spec.ts  audit_tool_history.spec.ts  audit_verify.spec.ts.ignore  bulk-edit.spec.ts  bulk-import-yaml.spec.ts  bulk-import.spec.ts  bulk-service-edit.spec.ts  bulk_edit.spec.ts  cmd-tool-editor.spec.ts  cmd-tools.spec.ts  collections.spec.ts  command-menu.spec.ts  command-palette.spec.ts  create_config_wizard.spec.ts  dashboard-persistence.spec.ts  dashboard.spec.ts  dashboard_gallery.spec.ts  dashboard_migration.spec.ts  dashboard_onboarding.spec.ts  dashboard_persistence.spec.ts  density-mode.spec.ts  diagnose.spec.ts  diagnostics.spec.ts  diff-feature.spec.ts  diff.spec.ts  discovery.spec.ts  doc_audit.spec.ts  e2e-graph.spec.ts  e2e.spec.ts  e2e_capabilities.spec.ts  e2e_full_coverage.spec.ts  e2e_tool_form.spec.ts  env-var-flow.spec.ts  (+107 more)
ui/tests-e2e/: global-search.spec.ts  verify_global_search.spec.ts
ui/tools/: check_jsdoc.py
ui/verification/: verify_search.py
(+5447 files in other folders)
