# Copyright 2026 Author(s) of MCP Any
# SPDX-License-Identifier: Apache-2.0

load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

# gazelle:prefix github.com/mcpany/core
# gazelle:exclude build
# gazelle:exclude node_modules
# gazelle:exclude ui
# gazelle:exclude tests/integration/upstream/node_modules

# Resolve local proto imports to go_proto_library targets
# gazelle:resolve go github.com/mcpany/core/proto/config/v1 //proto/config/v1:v1_go_proto
# gazelle:resolve go github.com/mcpany/core/proto/api/v1 //proto/api/v1:v1_go_proto
# gazelle:resolve go github.com/mcpany/core/proto/bus //proto/bus:bus_go_proto
# gazelle:resolve go github.com/mcpany/core/proto/mcp_options/v1 //proto/mcp_options/v1:v1_go_proto
# gazelle:resolve go github.com/mcpany/core/proto/mcp_router/v1 //proto/mcp_router/v1:v1_go_proto
# gazelle:resolve go github.com/mcpany/core/proto/topology/v1 //proto/topology/v1:v1_go_proto
# gazelle:resolve go github.com/mcpany/core/proto/admin/v1 //proto/admin/v1:v1_go_proto
# gazelle:resolve go github.com/mcpany/core/proto/examples/weather/v1 //proto/examples/weather/v1:v1_go_proto

# gazelle:resolve proto google/protobuf/go_features.proto //third_party/proto/google/protobuf:go_features_proto
# gazelle:resolve proto google/api/annotations.proto @googleapis//google/api:annotations_proto
# gazelle:resolve proto google/api/http.proto @googleapis//google/api:http_proto
# gazelle:resolve proto google/api/resource.proto @googleapis//google/api:resource_proto
# gazelle:resolve proto google/api/field_behavior.proto @googleapis//google/api:field_behavior_proto

# Resolve standard rules_go targets
# gazelle:resolve proto go google/protobuf/descriptor.proto @org_golang_google_protobuf//types/descriptorpb
# gazelle:resolve proto go google/protobuf/go_features.proto //third_party/proto/google/protobuf:go_features_go_proto
# gazelle:resolve proto go google/api/annotations.proto @org_golang_google_genproto_googleapis_api//annotations
# gazelle:resolve proto go google/api/http.proto @org_golang_google_genproto_googleapis_api//annotations
# gazelle:resolve proto go google/api/resource.proto @org_golang_google_genproto_googleapis_api//annotations
# gazelle:resolve proto go google/api/field_behavior.proto @org_golang_google_genproto_googleapis_api//annotations

# gazelle:resolve go google.golang.org/protobuf/types/descriptorpb @org_golang_google_protobuf//types/descriptorpb
# gazelle:resolve go google.golang.org/protobuf/types/gofeaturespb @org_golang_google_protobuf//types/gofeaturespb
# gazelle:resolve go google.golang.org/genproto/googleapis/api/annotations @org_golang_google_genproto_googleapis_api//annotations

# gazelle:go_proto_compilers //:go_proto_editions
# gazelle:go_grpc_compilers //:go_grpc_editions

load("@rules_go//proto:compiler.bzl", "go_proto_compiler")

go_proto_compiler(
    name = "go_proto_editions",
    plugin = "@org_golang_google_protobuf//cmd/protoc-gen-go",
    suffix = ".pb.go",
    visibility = ["//visibility:public"],
)

go_proto_compiler(
    name = "go_grpc_editions",
    plugin = "@org_golang_google_grpc_cmd_protoc_gen_go_grpc//:protoc-gen-go-grpc",
    suffix = "_grpc.pb.go",
    visibility = ["//visibility:public"],
)

gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=repositories.bzl%go_repositories",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "core_lib",
    srcs = ["fix_url_test_script.go"],
    importpath = "github.com/mcpany/core",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "core",
    embed = [":core_lib"],
    visibility = ["//visibility:public"],
)
