# Copyright 2026 Author(s) of MCP Any
# SPDX-License-Identifier: Apache-2.0

module(
    name = "mcp-any",
    version = "0.0.1",
)

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "protobuf", version = "33.5")
bazel_dep(name = "googleapis", version = "0.0.0-20260223-edfe7983")
bazel_dep(name = "googleapis-go", version = "1.0.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.2")
bazel_dep(name = "buildozer", version = "8.2.1")
bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "rules_pkg", version = "1.0.1")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//server:go.mod")
go_deps.gazelle_override(
    directives = [
        "gazelle:proto disable_global",
    ],
    path = "github.com/cncf/xds/go",
)
go_deps.gazelle_override(
    directives = [
        "gazelle:resolve go google.golang.org/protobuf/types/pluginpb @org_golang_google_protobuf//types/pluginpb",
    ],
    path = "github.com/bufbuild/protocompile",
)
go_deps.gazelle_override(
    path = "google.golang.org/genproto/googleapis/api",
)

# Add required direct dependencies from go.mod manually or via use_repo
# For now, let's let Gazelle handle it.
use_repo(
    go_deps,
    "com_github_alexliesenfeld_health",
    "com_github_alicebob_miniredis_v2",
    "com_github_alitto_pond_v2",
    "com_github_antchfx_xmlquery",
    "com_github_antchfx_xpath",
    "com_github_armon_go_metrics",
    "com_github_aws_aws_sdk_go",
    "com_github_aws_aws_sdk_go_v2",
    "com_github_aws_aws_sdk_go_v2_config",
    "com_github_aws_aws_sdk_go_v2_service_secretsmanager",
    "com_github_bufbuild_protocompile",
    "com_github_cenkalti_backoff_v4",
    "com_github_cloudevents_sdk_go_v2",
    "com_github_coder_websocket",
    "com_github_coreos_go_oidc_v3",
    "com_github_data_dog_go_sqlmock",
    "com_github_docker_docker",
    "com_github_eko_gocache_lib_v4",
    "com_github_eko_gocache_store_go_cache_v4",
    "com_github_fclairamb_afero_s3",
    "com_github_fsnotify_fsnotify",
    "com_github_getkin_kin_openapi",
    "com_github_gin_gonic_gin",
    "com_github_go_jose_go_jose_v4",
    "com_github_go_redis_redismock_v9",
    "com_github_go_sql_driver_mysql",
    "com_github_golang_jwt_jwt_v5",
    "com_github_google_go_cmp",
    "com_github_google_go_github_v39",
    "com_github_google_jsonschema_go",
    "com_github_google_uuid",
    "com_github_gorilla_mux",
    "com_github_gorilla_websocket",
    "com_github_graphql_go_graphql",
    "com_github_grpc_ecosystem_grpc_gateway_v2",
    "com_github_hashicorp_vault_api",
    "com_github_improbable_eng_grpc_web",
    "com_github_itchyny_gojq",
    "com_github_jellydator_ttlcache_v3",
    "com_github_johanneskaufmann_html_to_markdown",
    "com_github_joho_godotenv",
    "com_github_json_iterator_go",
    "com_github_lib_pq",
    "com_github_machinebox_graphql",
    "com_github_masterminds_semver_v3",
    "com_github_mcpany_core",
    "com_github_milvus_io_milvus_sdk_go_v2",
    "com_github_modelcontextprotocol_go_sdk",
    "com_github_nats_io_nats_go",
    "com_github_nats_io_nats_server_v2",
    "com_github_opencontainers_image_spec",
    "com_github_paesslerag_jsonpath",
    "com_github_patrickmn_go_cache",
    "com_github_pion_webrtc_v3",
    "com_github_pkg_sftp",
    "com_github_playwright_community_playwright_go",
    "com_github_pmezard_go_difflib",
    "com_github_prometheus_client_golang",
    "com_github_puzpuzpuz_xsync_v4",
    "com_github_redis_go_redis_v9",
    "com_github_samber_lo",
    "com_github_santhosh_tekuri_jsonschema_v5",
    "com_github_segmentio_kafka_go",
    "com_github_spf13_afero",
    "com_github_spf13_cobra",
    "com_github_spf13_pflag",
    "com_github_spf13_viper",
    "com_github_standard_webhooks_standard_webhooks_libraries",
    "com_github_stretchr_testify",
    "com_github_tidwall_gjson",
    "com_github_valyala_fasttemplate",
    "com_google_cloud_go_storage",
    "dev_essio_al_pkg_shellescape",
    "in_gopkg_square_go_jose_v2",
    "in_gopkg_yaml_v2",
    "in_gopkg_yaml_v3",
    "io_k8s_client_go",
    "io_k8s_sigs_yaml",
    "io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc",
    "io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_exporters_otlp_otlpmetric_otlpmetrichttp",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracehttp",
    "io_opentelemetry_go_otel_exporters_stdout_stdoutmetric",
    "io_opentelemetry_go_otel_exporters_stdout_stdouttrace",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_sdk_metric",
    "org_golang_google_api",
    "org_golang_google_genproto_googleapis_api",
    "org_golang_google_grpc",
    "org_golang_google_grpc_cmd_protoc_gen_go_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_crypto",
    "org_golang_x_oauth2",
    "org_golang_x_sync",
    "org_golang_x_time",
    "org_modernc_sqlite",
    "org_uber_go_goleak",
    "org_uber_go_mock",
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "debian_bookworm_slim",
    digest = "sha256:74d56e3931e0d5a1dd51f8c8a2466d21de84a271cd3b5a733b803aa91abf4421",
    image = "mirror.gcr.io/library/debian",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(oci, "debian_bookworm_slim", "debian_bookworm_slim_linux_amd64", "debian_bookworm_slim_linux_arm64")
