load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

# Copyright 2025 Author(s) of MCP Any
# SPDX-License-Identifier: Apache-2.0

proto_library(
    name = "go_features_proto",
    srcs = ["go_features.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:descriptor_proto"],
)

go_proto_library(
    name = "go_features_go_proto",
    compilers = ["//:go_proto_editions"],
    importpath = "google.golang.org/protobuf/types/gofeaturespb",
    proto = ":go_features_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "gofeaturespb",
    embed = [":go_features_go_proto"],
    importpath = "google.golang.org/protobuf/types/gofeaturespb",
    visibility = ["//visibility:public"],
)
