# Copyright 2026 Author(s) of MCP Any
# SPDX-License-Identifier: Apache-2.0

load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "gofeaturespb_proto",
    srcs = ["go_features.proto"],
    visibility = ["//visibility:public"],
    deps = ["@protobuf//:descriptor_proto"],
)

go_proto_library(
    name = "gofeaturespb_go_proto",
    compilers = ["@rules_go//proto:go_proto"],
    importpath = "google.golang.org/protobuf/types/gofeaturespb",
    proto = ":gofeaturespb_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "gofeaturespb",
    embed = [":gofeaturespb_go_proto"],
    importpath = "google.golang.org/protobuf/types/gofeaturespb",
    visibility = ["//visibility:public"],
)
