# Copyright 2026 Author(s) of MCP Any
# SPDX-License-Identifier: Apache-2.0

load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "bus_proto",
    srcs = ["bus.proto"],
    visibility = ["//visibility:public"],
    deps = ["@protobuf//:go_features_proto"],
)

go_proto_library(
    name = "bus_go_proto",
    compilers = ["@rules_go//proto:go_proto"],
    importpath = "github.com/mcpany/core/proto/bus",
    proto = ":bus_proto",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_google_protobuf//types/gofeaturespb"],
)

go_library(
    name = "bus",
    embed = [":bus_go_proto"],
    importpath = "github.com/mcpany/core/proto/bus",
    visibility = ["//visibility:public"],
)
