[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpany"
version = "0.1.0"
description = "Python Client SDK for MCP Any"
authors = [
  { name = "MCP Any Team", email = "info@mcpany.io" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "httpx",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]
