# Copyright 2026 Author(s) of MCP Any
# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "tests_test",
    srcs = [
        "e2e_ip_zone_test.go",
        "service_retry_test.go",
    ],
    deps = [
        "//proto/config/v1:v1_go_proto",
        "//server/pkg/app",
        "//server/pkg/logging",
        "//server/pkg/util",
        "@com_github_spf13_afero//:afero",
        "@com_github_stretchr_testify//mock",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/durationpb",
    ],
)
