# Copyright 2026 Author(s) of MCP Any
# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "tools_lib",
    srcs = ["check_doc.go"],
    importpath = "github.com/mcpany/core/server/tools",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "tools",
    embed = [":tools_lib"],
    visibility = ["//visibility:public"],
)
