# Copyright 2026 Author(s) of MCP Any
# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "v1_proto",
    srcs = ["admin.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//google/protobuf:go_features_proto",
        "//proto/config/v1:v1_proto",
        "//proto/mcp_router/v1:v1_proto",
        "@googleapis//google/api:annotations_proto",
    ],
)

go_proto_library(
    name = "v1_go_proto",
    compilers = ["//:go_grpc_editions"],
    importpath = "github.com/mcpany/core/proto/admin/v1",
    proto = ":v1_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "//google/protobuf:go_features_go_proto",
        "//proto/config/v1:config",
        "//proto/mcp_router/v1:mcp_router",
        "@org_golang_google_genproto_googleapis_api//annotations",
    ],
)

go_library(
    name = "admin",
    srcs = ["admin.pb.gw.go"],
    embed = [":v1_go_proto"],
    importpath = "github.com/mcpany/core/proto/admin/v1",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_grpc_ecosystem_grpc_gateway_v2//runtime",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//utilities",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//grpclog",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
    ],
)
