# Copyright 2026 Author(s) of MCP Any
# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "v1_proto",
    srcs = [
        "catalog_service.proto",
        "registration.proto",
        "skill_service.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//proto/config/v1:v1_proto",
        "//third_party/proto/google/protobuf:go_features_proto",
        "@com_google_protobuf//:descriptor_proto",
        "@googleapis//google/api:annotations_proto",
    ],
)

go_proto_library(
    name = "v1_go_proto",
    compilers = [
        "//:go_proto_editions",
        "//:go_grpc_editions",
    ],
    importpath = "github.com/mcpany/core/proto/api/v1",
    proto = ":v1_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/config/v1:v1_go_proto",
        "//third_party/proto/google/protobuf:go_features_go_proto",
        "@org_golang_google_genproto_googleapis_api//annotations",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/descriptorpb",
        "@org_golang_google_protobuf//types/known/structpb",
    ],
)

go_library(
    name = "api",
    srcs = [
        "catalog_service.pb.go",
        "catalog_service.pb.gw.go",
        "catalog_service_grpc.pb.go",
        "registration.pb.go",
        "registration.pb.gw.go",
        "registration_grpc.pb.go",
        "skill_service.pb.go",
        "skill_service.pb.gw.go",
        "skill_service_grpc.pb.go",
    ],
    importpath = "github.com/mcpany/core/proto/api/v1",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/config/v1:v1_go_proto",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//runtime",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//utilities",
        "@org_golang_google_genproto_googleapis_api//annotations",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//grpclog",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/gofeaturespb",
    ],
)
