# Copyright 2026 Author(s) of MCP Any
# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "v1_proto",
    srcs = [
        "auth.proto",
        "call.proto",
        "collection.proto",
        "config.proto",
        "health_check.proto",
        "profile.proto",
        "prompt.proto",
        "resource.proto",
        "service_template.proto",
        "skill.proto",
        "tool.proto",
        "upstream_service.proto",
        "user.proto",
        "webhook.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//proto/bus:bus_proto",
        "//third_party/proto/google/protobuf:go_features_proto",
        "@com_google_protobuf//:descriptor_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:struct_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "v1_go_proto",
    importpath = "github.com/mcpany/core/proto/config/v1",
    proto = ":v1_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/bus",
        "//third_party/proto/google/protobuf:go_features_go_proto",
        "@org_golang_google_protobuf//types/descriptorpb",
    ],
)

go_library(
    name = "config",
    srcs = [
        "auth.pb.go",
        "call.pb.go",
        "collection.pb.go",
        "config.pb.go",
        "health_check.pb.go",
        "profile.pb.go",
        "prompt.pb.go",
        "resource.pb.go",
        "service_template.pb.go",
        "skill.pb.go",
        "tool.pb.go",
        "upstream_service.pb.go",
        "user.pb.go",
        "webhook.pb.go",
    ],
    importpath = "github.com/mcpany/core/proto/config/v1",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/bus:bus_go_proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/gofeaturespb",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/structpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
