# Copyright 2026 Author(s) of MCP Any
# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "v1_proto",
    srcs = [
        "content.proto",
        "mcp_options.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//third_party/proto/google/protobuf:go_features_proto",
    ],
)

go_proto_library(
    name = "v1_go_proto",
    importpath = "github.com/mcpany/core/proto/mcp_options/v1",
    proto = ":v1_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//third_party/proto/google/protobuf:go_features_go_proto",
        "@org_golang_google_protobuf//types/descriptorpb",
    ],
)

go_library(
    name = "mcp_options",
    srcs = [
        "content.pb.go",
        "mcp_options.pb.go",
    ],
    importpath = "github.com/mcpany/core/proto/mcp_options/v1",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/descriptorpb",
        "@org_golang_google_protobuf//types/gofeaturespb",
    ],
)
