# Copyright 2026 Author(s) of MCP Any
# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@protobuf//bazel:proto_library.bzl", "proto_library")

proto_library(
    name = "v1_proto",
    srcs = [
        "content.proto",
        "mcp_options.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@protobuf//:descriptor_proto",
        "@protobuf//:go_features_proto",
    ],
)

go_proto_library(
    name = "v1_go_proto",
    compilers = ["@rules_go//proto:go_proto"],
    importpath = "github.com/mcpany/core/proto/mcp_options/v1",
    proto = ":v1_proto",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_google_protobuf//types/gofeaturespb"],
)

go_library(
    name = "mcp_options",
    embed = [":v1_go_proto"],
    importpath = "github.com/mcpany/core/proto/mcp_options/v1",
    visibility = ["//visibility:public"],
)
