# Copyright 2026 Author(s) of MCP Any
# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "v1_proto",
    srcs = ["topology.proto"],
    visibility = ["//visibility:public"],
    deps = ["//google/protobuf:go_features_proto"],
)

go_proto_library(
    name = "v1_go_proto",
    compilers = ["//:go_proto_editions"],
    importpath = "github.com/mcpany/core/proto/topology/v1",
    proto = ":v1_proto",
    visibility = ["//visibility:public"],
    deps = ["//google/protobuf:go_features_go_proto"],
)

go_library(
    name = "topology",
    embed = [":v1_go_proto"],
    importpath = "github.com/mcpany/core/proto/topology/v1",
    visibility = ["//visibility:public"],
)
