# Copyright 2026 Author(s) of MCP Any
# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "mcpctl_lib",
    srcs = [
        "doctor.go",
        "import.go",
        "main.go",
        "tool.go",
    ],
    importpath = "github.com/mcpany/core/server/cmd/mcpctl",
    visibility = ["//visibility:private"],
    deps = [
        "//proto/config/v1:v1_go_proto",
        "//server/pkg/config",
        "//server/pkg/health",
        "//server/pkg/tool",
        "@com_github_spf13_afero//:afero",
        "@com_github_spf13_cobra//:cobra",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

go_binary(
    name = "mcpctl",
    embed = [":mcpctl_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "mcpctl_test",
    srcs = [
        "doctor_test.go",
        "import_test.go",
        "main_test.go",
        "tool_test.go",
        "validate_test.go",
    ],
    embed = [":mcpctl_lib"],
    deps = [
        "//server/pkg/health",
        "@com_github_spf13_afero//:afero",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)
