# Copyright 2026 Author(s) of MCP Any
# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "mock_mcp_server_lib",
    srcs = ["main.go"],
    importpath = "github.com/mcpany/core/server/cmd/mock_mcp_server",
    visibility = ["//visibility:private"],
    deps = ["@com_github_modelcontextprotocol_go_sdk//mcp"],
)

go_binary(
    name = "mock_mcp_server",
    embed = [":mock_mcp_server_lib"],
    visibility = ["//visibility:public"],
)
